2017 02/09

The User Guide has been updated to match the functions of Karoo GP v1.0.1.


2017 02/08

The parameters.txt file now captures the full run-time configuration of both karoo_gp_main.py and karoo_gp_server.py.
This file is written to a unique (datetime stamp) directory in karoo_gp/runs/ at the auto-termination of _server.py
and with the user executed 'q'uit of _main.py.

The final list of best fit evolved Trees and the test of the highest numbered (usually the highest performing) Tree is
also recorded, with the test automatically executed based upon the original kernel designation. This functionality 
supports the fully hands-off execution of Karoo GP on a remote server, from a bash or Python script, for parallel or 
multiple serial evolutionary runs.

Thank you Marco Cavaglia for guiding the addition of this functionality to Karoo GP!


2017 02/06

Graphics Processing Units (GPU) are now supported with the introduction of the Python library TensorFlow. The end 
result is a staggering improvement in performance. With one comparison of a 10,000 data points (rows) x 9 features
(columns) dataset on a 40 core Intel Xeon motherboard versus a 2000 core Nvidia GPU card, the wall time was reduced 
from 50 hours to less than 4 minutes. On CPU-only computers, the performance on a single core is as much as 10x 
improved due to the vectorisation of the data and application of the C-based TensorFlow maths library.

To install TensorFlow, I recommend visiting https://www.tensorflow.org/get_started/ It is straight forward for Ubuntu, 
but unfortunately can be rather challenging with OSX. Have patience. Review the forums. It's worth the effort.

I owe many thanks to the expertise of Iurii Milovanov, a contract developer whom I engaged for this effort. While the
number of lines of Karoo GP modified were initially less than a dozen (replacing the multi-core pprocess calls), I asked 